@@ -1,0 +1,4 @@
+int sumFunc(int a1, int a2)
+{
+   return a1 + a2;
+}
