@@ -41,22 +41,26 @@
 
 #ifndef _VPR_LIBRARY_LOADER_H_
 #define _VPR_LIBRARY_LOADER_H_
-#define _VPR_LIBRARY_LOADER_H_
 
 #include <vpr/vprConfig.h>
+
 #include <string>
 #include <vector>
-#include <algorithm>
-#include <vpr/DynLoad/Library.h>
-#include <vpr/Util/Assert.h>
-#include <vpr/Util/Debug.h>
+#include <boost/function.hpp>
+
+#include <vpr/DynLoad/LibraryPtr.h>
 
 
 namespace vpr
 {
 
-template<typename INIT_OBJ>
-class LibraryLoader
+/**
+ * A helper for loading a specific class of dynamic shared objects (DSOs).
+ * Through (relatively) high-level methods, this class introduces a uniform
+ * naming scheme for DSOs.  More details are provided in the documentation for
+ * individual methods.
+ */
+class VPR_CLASS_API LibraryLoader
 {
 public:
    typedef std::vector<vpr::LibraryPtr> dso_list_t;
@@ -76,90 +80,65 @@ public:
    }
 
    /**
+    * Searches for a dynamic shared object (DSO) with the "base" name given in
+    * dsoBaseName.  The base name is a platform-independent, abstract name
+    * that makes up a substring of the name of the actual file that will be
+    * loaded.  A platform-specific extension (.so, .dll, etc) will be appended,
+    * and for an instantiation of this class in debug-enabled code, the suffix
+    * "_d" will be appended to the DSO's base name.  For example, given the
+    * base name mydso, a debug build on Windows would search for the file
+    * mydso_d.dll.  For a release (optimized) build, it would search for
+    * mysdso.dll.  The search will be performed using list of directories
+    * given in searchPath.
+    *
+    * @param dsoBaseName  The base name of the DSO to be loaded.  The
+    *                     platform-specific file extension will be appended
+    *                     prior to the search.
+    * @param searchPath   A list of directories where the target DSO may
+    *                     exist.
+    * @param initFuncName The name of the initialization function in the DSO
+    *                     that will be invoked to initialize the DSO's code.
+    * @param initFunc     A Boost.Function object (that is, a callable object)
+    *                     that will be invoked as a callback to initialize the
+    *                     DSO.  It will be passed a void* pointer to the
+    *                     initialization function looked up in the DSO.
+    *
+    * @note The vpr::Library object instantiated to hold the DSO is not
+    *       returned to the caller.  It can be retrieved through the
+    *       getDsoList() method.
+    *
+    * @see getDsoList, loadAndInitDSO
+    */
+   vpr::ReturnStatus findAndInitDSO(const std::string& dsoBaseName,
+                                    const std::vector<std::string>& searchPath,
+                                    const std::string& initFuncName,
+                                    boost::function1<bool, void*> initFunc);
+
+   /**
     * Loads the dynamic shared object (DSO) from the given vpr::LibraryPtr
-    * object and invokes its factory function.
+    * object and invokes its initialization function.  This method serves
+    * to hide the details of looking up and invoking the initialization
+    * function.  No extra steps are taken with the vpr::Library object to
+    * handle platform-specific issues.  It is assumed that by this point,
+    * the file has been found on the local file system and is ready to be
+    * loaded.
     *
     * @pre vpr::LibraryPtr contains a pointer to a valid vpr::Library object.
+    *
+    * @param dso          A pointer to the vpr::Library object holding the
+    *                     DSO information.
+    * @param initFuncName The name of the initialization function in the DSO
+    *                     that will be invoked to initialize the DSO's code.
+    * @param initFunc     A Boost.Function object (that is, a callable object)
+    *                     that will be invoked as a callback to initialize the
+    *                     DSO.  It will be passed a void* pointer to the
+    *                     initialization function looked up in the DSO.
     */
    vpr::ReturnStatus loadAndInitDSO(vpr::LibraryPtr dso,
-                                    const std::string& factoryFuncName,
-                                    INIT_OBJ* initObj)
-   {
-      vprASSERT(dso.get() != NULL && "Invalid vpr::LibraryPtr object");
+                                    const std::string& initFuncName,
+                                    boost::function1<bool, void*> initFunc);
 
-      const int lib_name_width(50);
-
-      vprDEBUG(vprDBG_ALL, vprDBG_CONFIG_LVL)
-         << "Loading library: " << std::setiosflags(std::ios::right)
-         << std::setfill(' ') << std::setw(lib_name_width) << dso->getName()
-         << std::resetiosflags(std::ios::right) << "     " << vprDEBUG_FLUSH;
-
-      // Load the DSO.
-      vpr::ReturnStatus status = dso->load();
-
-      if ( status.success() )
-      {
-         vprDEBUG(vprDBG_ALL, vprDBG_WARNING_LVL)
-            << "Loaded DSO successfully.\n" << vprDEBUG_FLUSH;
-
-         // Look up the DSO's factory function and store it in the function
-         // pointer called "creator."
-         void (*creator)(INIT_OBJ*);
-         creator = (void (*)(INIT_OBJ*)) dso->findSymbol(factoryFuncName);
-
-         if ( NULL != creator )
-         {
-            vprDEBUG_CONT(vprDBG_ALL, vprDBG_CONFIG_STATUS_LVL)
-               << "[ " << clrSetNORM(clrGREEN) << "OK" << clrRESET << " ]\n"
-               << vprDEBUG_FLUSH;
-            vprDEBUG(vprDBG_ALL, vprDBG_WARNING_LVL)
-               << "Got pointer to DSO factory function.\n" << vprDEBUG_FLUSH;
-
-            // XXX: This is a pretty lame way of managing the loaded DSOs.
-            mLoadedLibs.push_back(dso);
-
-            // Invoke the DSO's factory function with the given initialization
-            // object.
-            (*creator)(initObj);
-         }
-         else
-         {
-            vprDEBUG_CONT(vprDBG_ALL, vprDBG_CONFIG_LVL)
-               << "[ " << clrSetNORM(clrRED) << "FAILED lookup" << clrRESET
-               << " ]\n" << vprDEBUG_FLUSH;
-            vprDEBUG(vprDBG_ALL, vprDBG_WARNING_LVL)
-               << clrOutNORM(clrYELLOW, "WARNING")
-               << ": Failed to look up factory function '" << factoryFuncName
-               << "' in DSO '" << dso << "'\n" << vprDEBUG_FLUSH;
-         }
-      }
-      else
-      {
-         vprDEBUG_CONT(vprDBG_ALL, vprDBG_CONFIG_LVL)
-            << "[ " << clrSetNORM(clrRED) << "FAILED" << clrRESET << " ]\n"
-            << vprDEBUG_FLUSH;
-      }
-
-      return status;
-   }
-
-   vpr::ReturnStatus unloadDSO(vpr::LibraryPtr dso)
-   {
-      vpr::ReturnStatus status = dso->unload();
-
-      if ( status.success() )
-      {
-         dso_list_t::iterator i =
-            std::find(mLoadedLibs.begin(), mLoadedLibs.end(), dso);
-
-         if ( i != mLoadedLibs.end() )
-         {
-            mLoadedLibs.erase(i);
-         }
-      }
-
-      return status;
-   }
+   vpr::ReturnStatus unloadDSO(vpr::LibraryPtr dso);
 
    const dso_list_t& getDsoList() const
    {
